--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="icon" type="image/png" href="/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/style.css" />
-        <title>Phaser React Template</title>
+        <title>Money Mentor</title>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
